# regierungsprogramme

./: .gitignore  README.md  pyproject.toml  report.html
data/: Koalitionsvergleich.csv
data/Markdown/: protokoll-fpoe-oevp.md  protokoll-oevp-spoe-neos.md
pdf_chapter_comparator/: __init__.py  data_saver.py  main.py  report_generator.py  vectorstore.py
